finally fixed spacing issue

--- a/style/index.css
+++ b/style/index.css
@@ -23,6 +23,11 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+html{
+    /* width:80%;
+    max-width:800px;
+    margin:0 auto; */
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -46,16 +51,24 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+*{
+    background-color:steelblue;
+}
 Header{
-    font-size: xx-large;
+    font-size: 60px;
     margin:20px;
     display:flex;
     justify-content:center;
+    font-family: Georgia,serif;
 }
 nav{
     display:flex;
     justify-content:center;
-    padding:20px;
+    font-family:Georgia,serif;
+    padding:10px;
+}
+a{
+    color:thistle;
 }
 .home{
     padding:0 10px;
@@ -67,5 +80,42 @@ nav{
     padding:0 10px;
 }
 .projects{
-    padding: 0 10px;
+    padding:0 10px;
+}
+.title2{
+    display:flex;
+    justify-content:center;
+    padding:20px;
+    font-size:40px;
+    font-family:Georgia,serif;
+}
+.info{
+    display:flex;
+    justify-content:center;
+    text-align:center;
+    font-family:Georgia,serif;
+    padding:20px;
+}
+.image{
+    overflow: hidden;
+}
+.image1{
+    width:100%;
+}
+.project2{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-items:center;
+    margin:20px auto;
+    width:90%;
+}
+.box{
+    width:10%;
+    display:flex;
+    flex-wrap:nowrap;
+}
+footer{
+    text-align:center;
+    padding:40px;
 }
